# business-analyzer

./: .gitignore  README.md  pyproject.toml
.codex/skills/business-analyzer/: SKILL.md
.codex/skills/business-analyzer/.tmp/: charts_manifest.json  metrics.json  parsed_data.json  sample_sales.csv
.codex/skills/business-analyzer/references/: pdf-integration.md
.codex/skills/business-analyzer/scripts/: build_dashboard_json.py  chat_runner.py  compute_metrics.py  export_pdf.py  generate_charts.py  parse_data.py  plan_chart.py
.codex/skills/business-analyzer/scripts/charts/: render_area_scatter.py  render_bar_grouped.py  render_bar_horizontal.py  render_donut.py  render_funnel.py  render_heatmap.py  render_line.py  render_scatter.py
.codex/skills/business-analyzer/templates/: dashboard_template.jsx
app/: insights.py  llm_recommendations.py  main.py  pipeline.py  sitecustomize.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Charts.jsx
frontend/src/pages/: DashboardPage.jsx  OnboardingPage.jsx  ReportPage.jsx  UploadPage.jsx
sample_data/: ecommerce_sales_january_2025.csv  startup_marketing.csv  startup_sales_sample.csv
