[project]
name = "pme-startup-business-analyzer"
version = "0.1.0"
description = "Upload CSV/Excel sales data to generate KPI dashboards and AI recommendations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn==0.34.0",
    "python-multipart==0.0.22",
    "pandas==2.2.3",
    "matplotlib==3.10.7",
    "openpyxl==3.1.5",
    "openai==1.78.1",
    "python-dotenv==1.1.0",
    "reportlab"
]

[tool.uv]
package = false
